tests/specs/run/reference_types_error/reference_types_error.js.out
Check file:///[WILDLINE]/reference_types_error.js
TS2307 [ERROR]: Cannot find module 'file:///[WILDLINE]/nonexistent.d.ts'.
    at file:///[WILDLINE]/reference_types_error.js:1:22

error: Type checking failed.
