tests/specs/run/reference_types_error/reference_types_error.js
/// <reference types="./nonexistent.d.ts" />
export const a = 1;
